# actix-sqlx-test

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20240330083356_init.up.sql
src/: handler.rs  main.rs
