[package]
name = "actix-sqlx-test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
chrono = { version = "0.4.37", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
